--- a/requirements.txt
+++ b/requirements.txt
@@ -44,7 +44,7 @@ toolz==0.12.1
 tornado==6.4
 typing_extensions==4.11.0
 tzdata==2024.1
-urllib3==2.2.1
+urllib3
 zipp==3.18.1
 streamlit-drawable-canvas
 runpod==1.7.2
