--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Install AWS CLI
         run: |
             sudo apt-get update
-            sudo apt-get install -y awscli
+            sudo apt-get install awscli
 
       - name: Configure AWS Credentials
         env:
