--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,8 +49,8 @@ jobs:
 
       - name: Install AWS CLI
         run: |
-            sudo apt-get update
-            sudo apt-get install awscli
+            python -m pip install --upgrade pip
+            pip install awscli
 
       - name: Configure AWS Credentials
         env:
