--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ blinker==1.7.0
 cachetools==5.3.3
 certifi==2024.2.2
 charset-normalizer==3.3.2
-click==8.1.7
+click
 contourpy==1.2.1
 cycler==0.12.1
 fonttools==4.51.0
