--- a/requirements.txt
+++ b/requirements.txt
@@ -32,7 +32,7 @@ pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 pytz==2024.1
 referencing==0.34.0
-requests==2.31.0
+requests
 rich==13.7.1
 rpds-py==0.18.0
 six==1.16.0
@@ -47,5 +47,5 @@ tzdata==2024.1
 urllib3
 zipp==3.18.1
 streamlit-drawable-canvas
-streamlit-card
 runpod==1.7.2
+streamlit-card
